[package]
name = "juan"
version = "0.6.0"
edition = "2024"
repository = "https://github.com/DiscreteTom/juan"
license = "MIT"
description = "A self-hosted bridge that allows you to interact with ACP-compatible coding agents through Slack"
authors = ["DiscreteTom"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
time = { version = "0.3", features = ["local-offset", "formatting"] }
anyhow = "1"
slack-morphism = { version = "2", features = ["hyper"] }
agent-client-protocol = { version = "0.9", features = [
  "unstable_cancel_request",
  "unstable_session_model",
] }
dirs = "5"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
schemars = "1"
toml-scaffold = "0.4"
serde_yaml_ng = "0.10"
reqwest = { version = "0.13", features = ["json"] }
similar = "2"
base64 = "0.22"

[target.'cfg(target_env = "musl")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
